--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -978,5 +978,17 @@
   "onlineServices": "Online Services",
   "@onlineServices": {
     "description": "A chapter title in the playback settings page."
+  },
+  "login": "Login",
+  "@login": {
+    "description": "The action button of the login modal."
+  },
+  "loginFailed": "Login Failed",
+  "@loginFailed": {
+    "description": "The title of the login failed button of the login modal."
+  },
+  "loginFailedSubtitle": "'An error occurred while trying to login'",
+  "@loginFailedSubtitle": {
+    "description": "The subtitle of the login failed button of the login modal."
   }
 }
