--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -987,8 +987,20 @@
   "@loginFailed": {
     "description": "The title of the login failed button of the login modal."
   },
-  "loginFailedSubtitle": "'An error occurred while trying to login'",
+  "loginFailedSubtitle": "An error occurred while trying to login",
   "@loginFailedSubtitle": {
     "description": "The subtitle of the login failed button of the login modal."
+  },
+  "lastFmSubtitle": "Provide detailed listening insights with this music tracking service.",
+  "@lastFmSubtitle": {
+    "description": "The service description of the scrobble service."
+  },
+  "libreFmSubtitle": "A free and open platform for sharing your music taste.",
+  "@libreFmSubtitle": {
+    "description": "The service description of the scrobble service."
+  },
+  "listenBrainzSubtitle": "Contribute to an open-source database while tracking your habits.",
+  "@listenBrainzSubtitle": {
+    "description": "The service description of the scrobble service."
   }
 }
