feat: Add copy option to lyric context menu

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1022,5 +1022,9 @@
   "logout": "Logout",
   "@logout": {
     "description": "Option to log out in the error options menu."
+  },
+  "copy": "Copy",
+  "@copy": {
+    "description": "Item in the content context menu."
   }
 }
