--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1026,5 +1026,25 @@
   "copy": "Copy",
   "@copy": {
     "description": "Item in the content context menu."
+  },
+  "username": "Username",
+  "@username": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "password": "Password",
+  "@password": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "apiKey": "API Key",
+  "@apiKey": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "apiSecret": "API Secret",
+  "@apiSecret": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "userToken": "User Token",
+  "@userToken": {
+    "description": "Input field title of the scrobble login form."
   }
 }
