chore: Remove a missed kana in ja_Nise

--- a/lib/l10n/intl_ja_Nise.arb
+++ b/lib/l10n/intl_ja_Nise.arb
@@ -44,7 +44,7 @@
   "@unknownTrack": {},
   "unknownArtist": "芸人不明",
   "@unknownArtist": {},
-  "selectDirectory": "格納場所を選択",
+  "selectDirectory": "格納場所選択",
   "@selectDirectory": {},
   "noDataAvailable": "利用可能資料無",
   "@noDataAvailable": {},
