--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1024,5 +1024,29 @@
   "logout": "Disconnetti",
   "@logout": {
     "description": "Option to log out in the error options menu."
+  },
+  "copy": "Copia",
+  "@copy": {
+    "description": "Item in the content context menu."
+  },
+  "username": "Nome utente",
+  "@username": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "password": "Password",
+  "@password": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "apiKey": "Chiave API",
+  "@apiKey": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "apiSecret": "API Secret",
+  "@apiSecret": {
+    "description": "Input field title of the scrobble login form."
+  },
+  "userToken": "Token Utente",
+  "@userToken": {
+    "description": "Input field title of the scrobble login form."
   }
 }
