--- a/lib/l10n/intl_zh_Hant_TW.arb
+++ b/lib/l10n/intl_zh_Hant_TW.arb
@@ -755,5 +755,29 @@
   "logout": "登出",
   "@logout": {
     "description": "錯誤選項菜單中登出的選項。"
+  },
+  "copy": "拷貝",
+  "@copy": {
+    "description": "內容上下文選單中的項目。"
+  },
+  "username": "使用者名稱",
+  "@username": {
+    "description": "scrobble 登入表單的輸入欄位標題。"
+  },
+  "password": "密碼",
+  "@password": {
+    "description": "scrobble 登入表單的輸入欄位標題。"
+  },
+  "apiKey": "API Key",
+  "@apiKey": {
+    "description": "scrobble 登入表單的輸入欄位標題。"
+  },
+  "apiSecret": "API Secret",
+  "@apiSecret": {
+    "description": "scrobble 登入表單的輸入欄位標題。"
+  },
+  "userToken": "User Token",
+  "@userToken": {
+    "description": "scrobble 登入表單的輸入欄位標題。"
   }
 }
